--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "url": "profold-be-api-1"
   },
   "scripts": {
-    "test": "set USE_MOCK_MODEL=1 && mocha --recursive --require dotenv/config",
+    "test": "set USE_MOCK_MODEL=1 && mocha \"./**/*.test.js\" --recursive --require dotenv/config --exclude \"./node_modules/**\"",
     "prepare": "husky",
     "commitlint": "commitlint --edit",
-    "sync-envs": "node sync-env-files"
+    "sync-envs": "node sync-env-files",
+    "start": "node bootstrap.js"
   },
   "keywords": [],
   "author": "Resilience17",
@@ -67,7 +68,8 @@
     "@app-core/mock-server": "file:core/mock-server",
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
-    "chai": "^4.3.7",
+    "chai": "^4.5.0",
+    "chai-as-promised": "^8.0.2",
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-node": "^4.1.0",
@@ -76,8 +78,10 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "husky": "^9.0.11",
-    "mocha": "^10.5.1",
+    "mocha": "^10.8.2",
     "node-mocks-http": "^1.14.1",
-    "prettier": "^3.3.2"
+    "prettier": "^3.3.2",
+    "sinon": "^21.0.0",
+    "supertest": "^7.1.4"
   }
 }
